[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day1a"
path = "src/day1/a.rs"

[[bin]]
name = "day1b"
path = "src/day1/b.rs"

[[bin]]
name = "day2a"
path = "src/day2/a.rs"

[[bin]]
name = "day2b"
path = "src/day2/b.rs"

[[bin]]
name = "day3a"
path = "src/day3/a.rs"

[[bin]]
name = "day3b"
path = "src/day3/b.rs"

[[bin]]
name = "day4a"
path = "src/day4/a.rs"

[[bin]]
name = "day4b"
path = "src/day4/b.rs"

[[bin]]
name = "day5a"
path = "src/day5/a.rs"

[[bin]]
name = "day5b"
path = "src/day5/b.rs"